force-app/main/default/objects/Apttus_Config2__IncentiveLoyaltyEnrollment__c/Apttus_Config2__IncentiveLoyaltyEnrollment__c.object-meta.xml
<CustomObject>
    <description>Represents a single customer enrollment into an incentive loyalty program</description>
    <label>Incentive Loyalty Enrollment</label>
    <nameField>
        <displayFormat>LE-{00000000}</displayFormat>
        <label>Enrollment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incentive Loyalty Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>