force-app/main/default/objects/Apttus_Config2__IncentiveLoyaltyEnrollment__c/fields/Apttus_Config2__AccountId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated account enrolled in the incentive loyalty program</description>
    <inlineHelpText>ID of the associated account enrolled in the incentive loyalty program</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Loyalty Enrollments</relationshipLabel>
    <relationshipName>LoyaltyEnrollments</relationshipName>
    <type>Lookup</type>
</CustomField>