force-app/main/default/objects/Apttus_Config2__IncentiveLoyaltyEnrollment__c/fields/Apttus_Config2__Active__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the enrollment is active. Loyalty points are not accumulated for inactive enrollments.</description>
    <inlineHelpText>Indicates whether the enrollment is active. Loyalty points are not accumulated for inactive enrollments.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>