force-app/main/default/objects/Apttus_Config2__IncentiveLoyaltyEnrollment__c/fields/Apttus_Config2__AdditionalPointsToKeepLevel__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AdditionalPointsToKeepLevel__c</fullName>
    <description>The additional loyalty points required to maintain the current loyalty level</description>
    <inlineHelpText>The additional loyalty points required to maintain the current loyalty level</inlineHelpText>
    <label>Additional Points To Keep Level</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>