force-app/main/default/objects/Apttus_Config2__IncentiveLoyaltyEnrollment__c/fields/Apttus_Config2__CustomerType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CustomerType__c</fullName>
    <description>The customer type</description>
    <inlineHelpText>The customer type</inlineHelpText>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>