force-app/main/default/objects/Apttus_Config2__IncentiveLoyaltyEnrollment__c/fields/Apttus_Config2__EligibilityStartDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EligibilityStartDate__c</fullName>
    <description>The date when the member becomes eligible</description>
    <inlineHelpText>The date when the member becomes eligible</inlineHelpText>
    <label>Eligibility Start Date</label>
    <type>Date</type>
</CustomField>