force-app/main/default/objects/Apttus_Config2__IncentiveLoyaltyEnrollment__c/fields/Apttus_Config2__EnrollmentType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EnrollmentType__c</fullName>
    <description>The enrollment type</description>
    <inlineHelpText>The enrollment type</inlineHelpText>
    <label>Point Accrual Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>