force-app/main/default/objects/Apttus_Config2__IncentiveLoyaltyEnrollment__c/fields/Apttus_Config2__IncentiveId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IncentiveId__c</fullName>
    <description>ID of the associated incentive loyalty program</description>
    <inlineHelpText>ID of the associated incentive loyalty program</inlineHelpText>
    <label>Incentive</label>
    <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
    <relationshipLabel>Loyalty Enrollments</relationshipLabel>
    <relationshipName>LoyaltyEnrollments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>