force-app/main/default/objects/Apttus_Config2__IncentiveLoyaltyEnrollment__c/fields/Apttus_Config2__LastProcessedOrderDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__LastProcessedOrderDate__c</fullName>
    <description>The last order date processed for loyalty point accrual</description>
    <inlineHelpText>The last order date processed for loyalty point accrual</inlineHelpText>
    <label>Last Processed Order Date</label>
    <type>DateTime</type>
</CustomField>