force-app/main/default/objects/Apttus_Config2__IncentiveLoyaltyEnrollment__c/fields/Apttus_Config2__LastProcessedOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__LastProcessedOrderNumber__c</fullName>
    <description>The last order number processed for loyalty point accrual</description>
    <inlineHelpText>The last order number processed for loyalty point accrual</inlineHelpText>
    <label>Last Processed Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>