force-app/main/default/objects/Apttus_Config2__IncentiveLoyaltyEnrollment__c/fields/Apttus_Config2__LoyaltyLevelInitial__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__LoyaltyLevelInitial__c</fullName>
    <description>The loyalty level granted to the account/contact or custom point accrual level from the previous cycle. This level becomes the starting level for the new cycle unless an override is in effect.</description>
    <inlineHelpText>The loyalty level granted to the account/contact or custom point accrual level from the previous cycle. This level becomes the starting level for the new cycle unless an override is in effect.</inlineHelpText>
    <label>Loyalty Level (Initial)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>