force-app/main/default/objects/Apttus_Config2__IncentiveLoyaltyEnrollment__c/fields/Apttus_Config2__OverrideDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__OverrideDate__c</fullName>
    <description>The date the loyalty level was overridden</description>
    <inlineHelpText>The date the loyalty level was overridden</inlineHelpText>
    <label>Override Date</label>
    <type>Date</type>
</CustomField>