force-app/main/default/objects/Apttus_Config2__IncentiveLoyaltyEnrollment__c/fields/Apttus_Config2__OverrideReason__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__OverrideReason__c</fullName>
    <description>The reason for the loyalty level override</description>
    <inlineHelpText>The reason for the loyalty level override</inlineHelpText>
    <label>Override Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>