force-app/main/default/objects/Apttus_Config2__IncentiveLoyaltyEnrollment__c/fields/Apttus_Config2__Points__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Points__c</fullName>
    <description>The loyalty points accrued for the account or contact</description>
    <inlineHelpText>The loyalty points accrued for the account or contact</inlineHelpText>
    <label>Points</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>