force-app/main/default/objects/Apttus_Config2__IncentiveLoyaltyEnrollment__c/fields/Apttus_Config2__TermsAndConditionsAccepted__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__TermsAndConditionsAccepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether loyalty program terms and conditions are accepted by the customer</description>
    <inlineHelpText>Indicates whether loyalty program terms and conditions are accepted by the customer</inlineHelpText>
    <label>Terms And Conditions Accepted</label>
    <type>Checkbox</type>
</CustomField>